// Copyright (C) 2017 go-nebulas authors
//
// This file is part of the go-nebulas library.
//
// the go-nebulas library is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// the go-nebulas library is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with the go-nebulas library.  If not, see <http://www.gnu.org/licenses/>.
//

//The protobuf golang code is generated with protoc-gen-gogo v1.0.0

syntax = "proto3";

import "google/api/annotations.proto";
import "github.com/nebulasio/go-nebulas/consensus/pb/state.proto";
import "github.com/nebulasio/go-nebulas/neblet/pb/config.proto";

package rpcpb;

// RPC API interface.
service ApiService {
    // Return the state of the neb.
    rpc GetNebState (NonParamsRequest) returns (GetNebStateResponse) { 
        option (google.api.http) = {
            get: "/v1/user/nebstate"
        };
    }

    // Return the latest irreversible block.
    rpc LatestIrreversibleBlock (NonParamsRequest) returns (BlockResponse) {
        option (google.api.http) = {
            get: "/v1/user/lib"
        };
    }

    // Return the state of the account.
    rpc GetAccountState (GetAccountStateRequest) returns (GetAccountStateResponse) {
        option (google.api.http) = {
            post: "/v1/user/accountstate"
            body: "*"
        };
    }

    // Call transaction
    rpc Call (TransactionRequest) returns (CallResponse) {
        option (google.api.http) = {
            post: "/v1/user/call"
            body: "*"
        };
    }

	// Submit the signed transaction.
	rpc SendRawTransaction (SendRawTransactionRequest) returns (SendTransactionResponse) {
		option (google.api.http) = {
            post: "/v1/user/rawtransaction"
            body: "*"
        };
    }

    // Get block info by the block hash.
    rpc GetBlockByHash (GetBlockByHashRequest) returns (BlockResponse) {
        option (google.api.http) = {
            post: "/v1/user/getBlockByHash"
            body: "*"
        };
    }

    // Get block info by the block height.
    rpc GetBlockByHeight (GetBlockByHeightRequest) returns (BlockResponse) {
        option (google.api.http) = {
            post: "/v1/user/getBlockByHeight"
            body: "*"
        };
    }

    // Get transactionReceipt info by tansaction hash.
    rpc GetTransactionReceipt (GetTransactionByHashRequest) returns (TransactionResponse) {
        option (google.api.http) = {
            post: "/v1/user/getTransactionReceipt"
            body: "*"
        };
    }

    // Get transactionReceipt info by tansaction hash.
    rpc GetTransactionByContract (GetTransactionByContractRequest) returns (TransactionResponse) {
        option (google.api.http) = {
            post: "/v1/user/getTransactionByContract"
            body: "*"
        };
    }

    // Subscribe message
    rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse) {
        option (google.api.http) = {
            post: "/v1/user/subscribe"
            body: "*"
        };
    }

    // Get GasPrice
    rpc GetGasPrice(NonParamsRequest) returns (GasPriceResponse) {
        option (google.api.http) = {
            get: "/v1/user/getGasPrice"
        };
    }

    // EstimateGas
    rpc EstimateGas(TransactionRequest) returns (GasResponse) {
        option (google.api.http) = {
            post: "/v1/user/estimateGas"
            body: "*"
        };
    }

    rpc GetEventsByHash(HashRequest) returns (EventsResponse) {
        option (google.api.http) = {
            post: "/v1/user/getEventsByHash"
            body: "*"
        };
    }

    rpc GetDynasty (ByBlockHeightRequest) returns (GetDynastyResponse) {
		option (google.api.http) = {
            post: "/v1/user/dynasty"
            body: "*"
		};
    }

    // Verify Signature.
    rpc VerifySignature (VerifySignatureRequest) returns (VerifySignatureResponse) {
        option (google.api.http) = {
            post: "/v1/user/verifySignature"
            body: "*"
        };
    }
}

service AdminService {
    // Accounts return account list.
    rpc Accounts (NonParamsRequest) returns (AccountsResponse) {
        option (google.api.http) = {
            get: "/v1/admin/accounts"
        };
    }
    
    // NewAccount create a new account with passphrase
    rpc NewAccount(NewAccountRequest) returns (NewAccountResponse) {
        option (google.api.http) = {
            post: "/v1/admin/account/new"
            body: "*"
        };
    }

    // UnlockAccount unlock account with passphrase
    rpc UnlockAccount(UnlockAccountRequest) returns (UnlockAccountResponse) {
        option (google.api.http) = {
            post: "/v1/admin/account/unlock"
            body: "*"
        };
    }

    // LockAccount lock account
    rpc LockAccount(LockAccountRequest) returns (LockAccountResponse) {
        option (google.api.http) = {
            post: "/v1/admin/account/lock"
            body: "*"
        };
    }

    // Verify, sign, and send the transaction.
	rpc SendTransaction (TransactionRequest) returns (SendTransactionResponse) {
		option (google.api.http) = {
            post: "/v1/admin/transaction"
            body: "*"
        };
    }

    // Sign sign msg
    rpc SignHash(SignHashRequest) returns (SignHashResponse) {
        option (google.api.http) = {
            post: "/v1/admin/sign/hash"
            body: "*"
        };
    }

    rpc GenerateRandomSeed(GenerateRandomSeedRequest) returns (GenerateRandomSeedResponse) {
        option (google.api.http) = {
            post: "/v1/admin/generateRandomSeed"
            body: "*"
        };
    }

    // Sign sign transaction
    rpc SignTransactionWithPassphrase(SignTransactionPassphraseRequest) returns (SignTransactionPassphraseResponse) {
        option (google.api.http) = {
            post: "/v1/admin/sign"
            body: "*"
        };
    }

    // SendTransactionWithPassphrase send transaction with passphrase
    rpc SendTransactionWithPassphrase(SendTransactionPassphraseRequest) returns (SendTransactionResponse) {
        option (google.api.http) = {
            post: "/v1/admin/transactionWithPassphrase"
            body: "*"
        };
    }

    rpc StartPprof (PprofRequest) returns (PprofResponse) {
        option (google.api.http) = {
			post: "/v1/admin/pprof"
			body: "*"
		};
    }

    //Get Config
    rpc GetConfig (NonParamsRequest) returns (GetConfigResponse) {
        option (google.api.http) = {
            get: "/v1/admin/getConfig"
		};

    }

    // Return the p2p node info.
    rpc NodeInfo (NonParamsRequest) returns (NodeInfoResponse) {
        option (google.api.http) = {
            get: "/v1/admin/nodeinfo"
        };
    }
}

// Request message of Subscribe rpc
message SubscribeRequest {
    repeated string topics = 1;
}

// Request message of Subscribe rpc
message SubscribeResponse {
    string topic = 1;
    string data = 2;
}

// Request message of non params.
message NonParamsRequest {
}

// Response message of node info.
message NodeInfoResponse {
    // the node ID.
    string id = 1;

    // the block chainID.
    uint32 chain_id  = 2;

    // coinbase
    string coinbase = 3;

    // Number of peers currenly connected.
    uint32 peer_count = 4;

    // the node synchronized status.
    bool synchronized = 5;

    // the node route table bucket size.
    int32 bucket_size = 6;

    // the network protocol version.
    string protocol_version = 10;

    repeated RouteTable route_table = 11;
}


message RouteTable {
    string id = 1;
    repeated string address = 2;
}

// Response message of GetNebState rpc.
message GetNebStateResponse {

    // Block chain id
    uint32 chain_id = 1;

    // Current neb tail hash
    string tail = 2;

    // Current neb lib hash
    string lib = 3;

    // Current neb tail block height
    uint64 height = 4;

    // The current neb protocol version.
    string protocol_version = 6;

    // The peer sync status.
    bool synchronized = 7;

    // neb version
    string version = 8;
}

// Response message of Accounts rpc.
message AccountsResponse {
    // Account list
    repeated string addresses = 1;
}

// Request message of GetAccountState rpc.
message GetAccountStateRequest {
    // Hex string of the account addresss.
    string address = 1;

    // block account state with height. If not specified, use 0 as tail height.
    uint64 height = 2;
}

// Response message of GetAccountState rpc.
message GetAccountStateResponse {
    // Current balance in unit of 1/(10^18) nas.
    string balance = 1; // uint128, len=16

    // Current transaction count.
    uint64 nonce = 2;

    // Account type
    uint32 type = 3;

    // Block height
    uint64 height = 4;

    // Current sender pending tx count
    uint64 pending = 5;
}

// Response message of Call rpc.
message CallResponse {
    // result of smart contract method call.
    string result = 1;

    //execute error
    string execute_err = 2;

    //estimate gas used
    string estimate_gas = 3;
}

// ByBlockHeightRequest message
message ByBlockHeightRequest {
    uint64 height = 1;
}

// Response message of GetDynastyRequest rpc
message GetDynastyResponse {
	repeated string miners = 1;
}

// Request message of SendTransaction rpc.
message TransactionRequest {
	// Hex string of the sender account addresss.
	string from = 1;

    // Hex string of the receiver account addresss.
    string to = 2;

    // Amount of value sending with this transaction.
    string value = 3; // uint128, len=16

    // Transaction nonce.
    uint64 nonce = 4;

	// gasPrice sending with this transaction.
	string gas_price = 5; // uint128, len=16

	// gasLimit sending with this transaction.
	string gas_limit = 6; // uint128, len=16

	// contract sending with this transaction
	ContractRequest contract = 7;

    // binary data for transaction
    bytes binary = 10;

    // protocol data for transaction
    bytes protocol = 11;

    // transaction payload type, enum:binary, deploy, call, protocol
    string type = 20;
}

message ContractRequest {
	// contract source code.
	string source = 1;

	// contract source type, support javascript and typescript
	string source_type = 2;

	// call contract function name
	string function = 3;

	// the params of contract.
	string args = 4;
}

// Request message of SendRawTransactionRequest rpc.
message SendRawTransactionRequest {

    // Signed data of transaction
    bytes data = 1;
}

// Response message of SendTransaction rpc.
message SendTransactionResponse {
    // Hex string of transaction hash.
    string txhash = 1;

    // Hex string of contract address if transaction is deploy type
    string contract_address = 2;
}

// Request message of GetBlockByHash rpc.
message GetBlockByHashRequest {
    // Hex string of block hash.
    string hash = 1;

    // If true it returns the full transaction objects, if false only the hashes of the transactions.
    bool full_fill_transaction = 2;
}

// Request message of GetBlockByHeight rpc.
message GetBlockByHeightRequest {
    // block height.
    uint64 height = 1;

    // If true it returns the full transaction objects, if false only the hashes of the transactions.
    bool full_fill_transaction = 2;
}

// Request message of GetTransactionByHash rpc.
message GetTransactionByHashRequest {
    // Hex string of transaction hash.
    string hash = 1;
}

// Request message of GetTransactionByContract rpc.
message GetTransactionByContractRequest {
    // string of contract address.
    string address = 1;
}

// Response message of Block.
message BlockResponse {

    // Hex string of block hash.
    string hash = 1;

    // Hex string of block parent hash.
    string parent_hash = 2;

    // block height
    uint64 height = 3;

    // block nonce
    uint64 nonce = 4;

    // Hex string of coinbase address.
    string coinbase = 5;

    // block timestamp.
    int64 timestamp = 6;

    // block chain id
    uint32 chain_id = 7;

    // Hex string of state root.
    string state_root = 8;

    // Hex string of txs root.
    string txs_root = 9;

    // Hex string of event root.
    string events_root = 10;

    // Hex string of consensus root.
    consensuspb.ConsensusRoot consensus_root = 11;

    // Miner
    string miner = 12;

    // Random seed
    string randomSeed = 13;

    // Random proof
    string randomProof = 14;

    // is finaliy
    bool is_finality = 15;

    // transaction slice
    repeated TransactionResponse transactions = 100;
}

// Response message of TransactionReceipt.
message TransactionResponse {

    // Hex string of tx hash.
    string hash = 1;

    uint32 chainId = 2;

    // Hex string of the sender account addresss.
    string from = 3;

    // Hex string of the receiver account addresss.
    string to = 4;

    string value = 5;

    // Transaction nonce.
    uint64 nonce = 6;

    int64 timestamp = 7;

    string type = 8;

    bytes data = 9;

    string gas_price = 10;

    string gas_limit = 11;

    string contract_address = 12;

    // transaction status 0 failed, 1 success, 2 pending
    int32 status = 13;

    // transaction gas used
    string gas_used = 14;

    // contract execute error
    string execute_error = 15;

    // contract execute result
    string execute_result = 16;

    // transaction's block height
    uint64 block_height = 17;
}

message NewAccountRequest {
    string passphrase = 1;
}

message NewAccountResponse {
    string address = 1;
}

message UnlockAccountRequest {
    string address = 1;
    string passphrase = 2;
    uint64 duration = 3;
}

message UnlockAccountResponse {
    bool result = 1;
}

message LockAccountRequest {
    string address = 1;
}

message LockAccountResponse {
    bool result = 1;
}

message SignHashRequest {

    // sign address
    string address = 1;

    // sign msg
    bytes hash = 2;

    // sign algorithm
    uint32 alg = 3;
}

message SignHashResponse {
    bytes data = 1;
}

message GenerateRandomSeedRequest {
    // miner address
    string address = 1;
    // parent seed of new block
    bytes parent_seed = 2;
    //  hash of new block's ancestor
    bytes ancestor_hash = 3;
}

message GenerateRandomSeedResponse {
    bytes vrf_seed = 1;
    bytes vrf_proof = 2;
}

message SignTransactionPassphraseRequest {
	// transaction struct
	TransactionRequest transaction = 1;

    // from account passphrase
    string passphrase = 2;
}

message SignTransactionPassphraseResponse {
    bytes data = 1;
}

message SendTransactionPassphraseRequest {
	// transaction struct
	TransactionRequest transaction = 1;

    // from account passphrase
    string passphrase = 2;
}

message GasPriceResponse {
    string gas_price = 1;
}

// Request message of GetTransactionByHash rpc.
message HashRequest {
    // Hex string of block/transaction hash.
    string hash = 1;
}

message GasResponse {
    string gas = 1;
    string err = 2;
}

message EventsResponse {
   repeated Event events = 1;
}

message Event {
    string topic = 1;
    string data = 2;
}

message PprofRequest {
    string listen = 1;
}

message PprofResponse {
    bool result = 1;
}

message GetConfigResponse {
    // Config
    nebletpb.Config config = 1;
}

message VerifySignatureRequest {
    string msg = 1;
    string signature = 2;
    string address = 3;
    uint32 alg = 4;
}

message VerifySignatureResponse {
    bool result = 1;
    string address = 2;
}

message GetNRByAddressRequest {
    // nr address
    string address = 1;
}

message GetNRHandleRequest {
    // start block height of nr calculate interval
    uint64 start = 1;

    // end block height of nr calculate interval. If not specified, use 0 as tail height.
    uint64 end = 2;

    // nr version
    uint64 version = 3;
}

message GetNRHandleResponse {
    string handle = 1;
}

message GetNRListByHandleRequest {
    // nr handle
    string handle = 1;
}

message GetNRListResponse {

    // nr algorithm version
    uint64 version = 1;

    // start block height of nr calculate interval
    uint64 start = 2;

    // end block height of nr calculate interval. If not specified, use 0 as tail height.
    uint64 end = 3;

    // nr data list
    repeated NRItem data = 4;
}

message NRItem {
    // nr address
    string address = 1;

    // score of nr.
    string score = 2;

    string median = 3;

    string weight = 4;
}

message GetDIPListRequest {
    // height
    uint64 height = 1;
}

message GetDIPListResponse {
    // dip algorithm version
    uint64 version = 1;

    // start block height of dip calculate interval
    uint64 start = 2;

    // end block height of dip calculate interval.
    uint64 end = 3;

    // dip data list
    repeated DIPItem data = 4;
}

message DIPItem {
    // dip address
    string address = 1;

    // dip contract address
    string contract = 2;

    // value of dip reward.
    string value = 3;
}
